--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>      
-    <header>
+    <header class="navbar">
         <div class="logo">
             <img src="rpbc.png" alt="Company Logo">
             <p class="tagline">college for BCA,BBA,B.Com</p>
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="index.php">Home</a></li>
-                <li><a href="aboutUs.php">About Us</a></li>
-                <li><a href="courses.php">Courses</a></li>
-                <li><a href="activities.php">Activites</a></li>
-                <li><a href="studentPor.php">Student Portal</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutUs.html">About Us</a></li>
+                <!-- <li><a href="courses.html">Courses</a></li> -->
+                <li><a href="activities.html">Activites</a></li>
+                <li><a href="studentPor.html">Student Portal</a></li>
             </ul>
         </nav>
         <div class="burger">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
-        </div>
+        </div>    
     </header>
 
     <section class="slider">
@@ -81,21 +82,21 @@
         <div class="courses">
             <div class="cours">
                 <img src="bba.png" alt="ba">
-                <a class="link" href="bba.php">Bachelor of Business Administration (B.B.A.)</a>
+                <a class="link" href="bba.html">Bachelor of Business Administration (B.B.A.)</a>
                 <p>Bachelor of Business Administration degree is professional undergraduate course in Business Management and it's a one of the most popular bachelor degree programs. Help to develop the student's practical, managerial and communication skills, and business decision-making capability.</p>
-                <a class="button" href="bba.php" class="link">Read more</a>
+                <a class="button" href="bba.html" class="link">Read more</a>
             </div>
             <div class="cours">
                 <img src="bcom.png" alt="bcom">
-                <a class="link" href="bcom.php">Bachelor of Commerce (B.Com.)</a>
+                <a class="link" href="bcom.html">Bachelor of Commerce (B.Com.)</a>
                 <p>The Bachelor of Commerce degree provides wide range of managerial skills, while building competence in a particular area of business. Students are exposed to general business principles, taking courses in accounting, finance, income tax, investment banking, etc.</p>
-                <a class="button" href="bcom.php" class="link">Read more</a>
+                <a class="button" href="bcom.html" class="link">Read more</a>
             </div>
             <div class="cours">
                 <img src="bca.png" alt="bca">
-                <a class="link" href="bca.php">Bachelor of Computer Applications (B.C.A.)</a>
+                <a class="link" href="bca.html">Bachelor of Computer Applications (B.C.A.)</a>
                 <p>Bachelor of Computer Applications is a three year undergraduate degree program for candidates wishing to develop into the world of Computer languages. It's cover basic and advanced programming language, Software Engineering, Object Oriented Programming, World-Wide-Web and many more.</p>
-                <a class="button" href="bca.php" class="link">Read more</a>
+                <a class="button" href="bca.html" class="link">Read more</a>
             </div>
         </div>
         <div class="notice">
@@ -104,50 +105,12 @@
         </div>
     </div>
 
-    <div class="footer">
-        <div class="boxes">
-            <div class="box box1">
-                <h1>Our Mission</h1>
-                <hr>
-                <p>To create and sustain a community of learning in which student acquire knowledge and learn to apply in professionally with due considerations for ethical, ecological and economic issues to help in building national capabilities in science technology humanities, management, etc.</p>
-            </div>
-            <div class="box box2">
-                <h1>Our Vision</h1>
-                <hr>
-                <p>To be an academic institution in dynamic equilibrium with its social ecological and economic environment striving continuously for excellence in education research and technological service to the nation.</p>
-            </div>
-            <div class="box box3">
-                <h1>Contact Us</h1>
-                <hr>
-                <p>Shree R. P. Bhalodia College
-                    7, Manhar Plot,
-                    Vidhyanagar Main Road,
-                    Rajkot, Gujarat, India - 360002</p>
-                <div class="social-icon">
-                    <h3>you can also visite us on</h3>
-                    <ul>
-                        <li><a href="#"><img src="insta.png" alt="instagram"></a></li>
-                        <li><a href="#"><img src="twitter.png" alt="twitter"></a></li>
-                        <li><a href="#"><img src="fb.png" alt="facebook"></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="box box4">
-                <h1>Quick Links</h1>
-                <hr>
-                <ul>
-                    <li><a href="#">Student Portal</a></li>
-                    <li><a href="#">Courses</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="copyright">
-            <h3 class="copy">All rights are reserved by &copy;R.P.Bhalodia</h3>
-            <h4 class="dev">Developed by Smit Chitroda</h4>
-        </div>
-    </div>
+    <footer class="footer">
+
+    </footer>
 
     <script src="res.js"></script>
+    <!-- <script src="navbar.js"></script> -->
+    <script src="footer.js"></script>
 </body>
 </html>
